# python-poetry-docker-app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
app/: main.py
app/common/: constants.py  logging.py
