[tool.poetry]
name = "octopus-monitoring"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"
packages = [{include = "octopus_monitoring"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
mypy = "^1.8.0"
ruff = "^0.1.11"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
